# [lib]
# name = "msgpack_rs"
# # proc-macro = true

# [package]
# name = "msgpack-rs"
# version = "0.1.0"
# authors = ["Yuta Iwama <ganmacs@gmail.com>"]
# edition = "2018"

# [dependencies]

# byteorder = "1"
# serde = { version = "1.0", features = ["derive"] }

# [workspace]
# members = [
#     "msgpack-rs_derive",
# ]
[workspace]
members = [
    "msgpack-rs",
    # "msgpack-rs_serde",
    # "msgpack-rs_derive",
]
