[lib]
name = "msgpack"

[package]
name = "msgpack-rs"
description = "rust implementation of msgpack"
license = "MIT"
version = "0.0.1"
authors = ["Yuta Iwama <ganmacs@gmail.com>"]
edition = "2018"
repository = "https://github.com/ganmacs/msgpack-rs"

[dependencies]
byteorder = "1"
bytes = "0.4.12"
chrono = "0.4"
serde = "1.0.99"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"